Changes

from version 0.99 to 0.992

bugfix:
- propose valid filenames for all file types when saving them


from version 0.98 to 0.99

bugfixes:
- re-enable all settings after an action file was loaded and run
- when running multiple steps, show the currently executed step correctly

improvements:
- when more than one step is used, the currently executed step is
  highlighted by an asterisk in its name
- it is now possible to view the state of pumps 5 - 8 while the pumps
  are running
- the program stores now the chart settings when it is closed
  To get the default appearance, use the new menu
  Miscellaneous -> Reset Chart Appearance


from version 0.97 to 0.98

bugfixes:
- action files created with versions of JT Pump Driver that only support 4 pumps
  can now be loaded and executed without errors
- the settings for pump 5 - 8 are now disabled when their step is not used
- no action file can be loaded or saved while the pumps are running


from version 0.96 to 0.97

bugfix:
- fix that endless repeats of multiple pumping steps could lead to a crash


from version 0.95 to 0.96

improvement:
- a started calibration can now be aborted by right-clicking on the chart

bugfixes:
- fix the calibration on a channel containing the mean of two other channels
- axis settings dialog fixes
- definition file handling fixes


from version 0.94 to 0.95

improvements:
- to change the background color of a chart, right-click on the chart
  The advantage is that now every left double-click on a chart axis will
  open the axis settings dialog and not sometimes the color dialog.
- when changing the chart axis properties (by double-clicking on an axis)
  the settings for min/max show now as preset the current min/max values 

bugfixes:
- when temperature was displayed in the SIX chart its axis range was
  sometimes incorrect
- when the calibration concentration was changed in the dialog, it was not
  always taken into account


from version 0.93 to 0.94

bugfixes: